printing: Rename GTK_UNIT_PIXEL to GTK_UNIT_NONE

...and document that many functions don't accept "none" as a unit.

https://bugzilla.gnome.org/show_bug.cgi?id=460908